add more engines to read csv

--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -40,11 +40,11 @@
    "outputs": [],
    "source": [
     "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
-    "abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"pyarrow\")\n",
-    "abide = dd.read_csv(csv_file)\n",
+    "abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
+    "abide = dd.read_csv(csv_file, sample=1250000)\n",
     "\n",
-    "_abide_name = abide.columns.tolist()  #[1:]\n",
-    "_abide_name = list(abide.columns)  #[1:]\n",
+    "_abide_name = abide.columns.tolist()#[1:]\n",
+    "_abide_name = list(abide.columns)#[1:]\n",
     "\n",
     "print(_abide_name)\n",
     "\n",
