--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:03.697365Z",
-     "start_time": "2023-01-15T18:06:02.803432Z"
+     "end_time": "2023-01-16T05:20:14.066276Z",
+     "start_time": "2023-01-16T05:20:13.227601Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:03.734379Z",
-     "start_time": "2023-01-15T18:06:03.698651Z"
+     "end_time": "2023-01-16T05:20:14.101626Z",
+     "start_time": "2023-01-16T05:20:14.067372Z"
     }
    },
    "outputs": [],
@@ -239,8 +239,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:03.805981Z",
-     "start_time": "2023-01-15T18:06:03.736235Z"
+     "end_time": "2023-01-16T05:20:14.116440Z",
+     "start_time": "2023-01-16T05:20:14.103142Z"
     }
    },
    "outputs": [],
@@ -446,26 +446,38 @@
     "        MI_UKBB = pl.map(_binary_filter_plink_slice,\n",
     "                         _np.array_split(ind, core_num * multp))\n",
     "    MI_UKBB = _np.hstack(MI_UKBB)\n",
-    "    return MI_UKBB\n",
-    "\n",
-    "\n",
+    "    return MI_UKBB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "51fcb92a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-16T05:20:14.138360Z",
+     "start_time": "2023-01-16T05:20:14.117752Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
-    "def _read_csv(csv_file, _usecols, csv_engine, parquet_file):\n",
+    "def _read_csv(csv_file, _usecols, csv_engine, parquet_file, sample):\n",
     "    \"\"\"\n",
     "    Read a csv file using differnet engines. Use dask to read csv if low in memory.\n",
     "    \"\"\"\n",
-    "    assert csv_engine == \"dask\" or csv_engine == \"pyarrow\" or csv_engine == \"fastparquet\", \"Only dask and pandas pyarrow or fastparquet are supported to read csv files.\"\n",
+    "    assert csv_engine == \"dask\" or csv_engine == \"pyarrow\" or csv_engine == \"fastparquet\" or csv_engine == \"c\" or csv_engine == \"python\", \"Only dask and pandas csv engines or fastparquet are supported to read csv files.\"\n",
     "    if _np.array(_usecols).size == 0:\n",
     "        print(\n",
     "            \"Variable names not provided -- start reading variable names from csv file now, might take some time, depending on the csv file size.\"\n",
     "        )\n",
     "        if csv_engine == \"dask\":\n",
-    "            _csv = _dd.read_csv(csv_file)\n",
+    "            _csv = _dd.read_csv(csv_file, sample=sample)\n",
     "            _usecols = list(_csv.columns)[1:]\n",
-    "        elif csv_engine == \"pyarrow\":\n",
+    "        elif csv_engine == \"pyarrow\" or csv_engine == \"c\" or csv_engine == \"python\":\n",
     "            _csv = _pd.read_csv(csv_file,\n",
     "                                encoding='unicode_escape',\n",
-    "                                engine=\"pyarrow\")\n",
+    "                                engine=csv_engine)\n",
     "            _usecols = _csv.columns.to_list()[1:]\n",
     "        elif csv_engine == \"fastparquet\":\n",
     "            _csv = _pd.read_parquet(parquet_file, engine=\"fastparquet\")\n",
@@ -474,12 +486,12 @@
     "    else:\n",
     "        _usecols = _np.array(_usecols)\n",
     "        if csv_engine == \"dask\":\n",
-    "            _csv = _dd.read_csv(csv_file, names=_usecols)\n",
-    "        elif csv_engine == \"pyarrow\":\n",
+    "            _csv = _dd.read_csv(csv_file, names=_usecols, sample=sample)\n",
+    "        elif csv_engine == \"pyarrow\" or csv_engine == \"c\" or csv_engine == \"python\":\n",
     "            _csv = _pd.read_csv(csv_file,\n",
     "                                encoding='unicode_escape',\n",
     "                                usecols=_usecols,\n",
-    "                                engine=\"pyarrow\")\n",
+    "                                engine=csv_engine)\n",
     "        elif csv_engine == \"fastparquet\":\n",
     "            _csv = _pd.read_parquet(parquet_file,\n",
     "                                    engine=\"fastparquet\")[_usecols]\n",
@@ -495,7 +507,7 @@
     "        _ = _np.asarray(_csv[__].dropna().compute())\n",
     "        _a = _[:, 0]\n",
     "        _b = _[:, 1]\n",
-    "    elif csv_engine == \"pyarrow\" or csv_engine == \"fastparquet\":\n",
+    "    elif csv_engine == \"pyarrow\" or csv_engine == \"c\" or csv_engine == \"python\" or csv_engine == \"fastparquet\":\n",
     "        _ = _csv[__].dropna().to_numpy()\n",
     "        _a = _[:, 0]\n",
     "        _b = _[:, 1]\n",
@@ -509,8 +521,9 @@
     "                      kernel=\"epa\",\n",
     "                      bw=\"silverman\",\n",
     "                      machine_err=1e-12,\n",
-    "                      csv_engine=\"pyarrow\",\n",
-    "                      parquet_file=\"_\"):\n",
+    "                      csv_engine=\"c\",\n",
+    "                      parquet_file=\"_\",\n",
+    "                      sample=256000):\n",
     "    \"\"\"\n",
     "    Take a (potentionally large) csv file to calculate the mutual information between outcome and covariates.\n",
     "    The outcome should be binary and the covariates be continuous. \n",
@@ -522,7 +535,8 @@
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
     "                               _usecols=_usecols,\n",
     "                               csv_engine=csv_engine,\n",
-    "                               parquet_file=parquet_file)\n",
+    "                               parquet_file=parquet_file,\n",
+    "                               sample=sample)\n",
     "    MI_csv = _np.empty(len(_usecols) - 1)\n",
     "    for j in _np.arange(len(_usecols) - 1):\n",
     "        __ = [\n",
@@ -547,8 +561,9 @@
     "                          bw=\"silverman\",\n",
     "                          norm=2,\n",
     "                          machine_err=1e-12,\n",
-    "                          csv_engine=\"pyarrow\",\n",
-    "                          parquet_file=\"_\"):\n",
+    "                          csv_engine=\"c\",\n",
+    "                          parquet_file=\"_\",\n",
+    "                          sample=256000):\n",
     "    \"\"\"\n",
     "    Take a (potentionally large) csv file to calculate the mutual information between outcome and covariates.\n",
     "    Both the outcome and the covariates should be continuous. \n",
@@ -559,7 +574,8 @@
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
     "                               _usecols=_usecols,\n",
     "                               csv_engine=csv_engine,\n",
-    "                               parquet_file=parquet_file)\n",
+    "                               parquet_file=parquet_file,\n",
+    "                               sample=sample)\n",
     "\n",
     "    MI_csv = _np.empty(len(_usecols) - 1)\n",
     "    for j in _np.arange(len(_usecols) - 1):\n",
@@ -587,8 +603,9 @@
     "                               machine_err=1e-12,\n",
     "                               core_num=\"NOT DECLARED\",\n",
     "                               multp=1,\n",
-    "                               csv_engine=\"pyarrow\",\n",
-    "                               parquet_file=\"_\"):\n",
+    "                               csv_engine=\"c\",\n",
+    "                               parquet_file=\"_\",\n",
+    "                               sample=256000):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) Take a (potentionally large) csv file to calculate the mutual information between outcome and covariates.\n",
     "    The outcome should be binary and the covariates be continuous. \n",
@@ -607,7 +624,8 @@
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
     "                               _usecols=_usecols,\n",
     "                               csv_engine=csv_engine,\n",
-    "                               parquet_file=parquet_file)\n",
+    "                               parquet_file=parquet_file,\n",
+    "                               sample=sample)\n",
     "\n",
     "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _binary_filter_csv_slice(_slice):\n",
@@ -650,8 +668,9 @@
     "                                   machine_err=1e-12,\n",
     "                                   core_num=\"NOT DECLARED\",\n",
     "                                   multp=1,\n",
-    "                                   csv_engine=\"pyarrow\",\n",
-    "                                   parquet_file=\"_\"):\n",
+    "                                   csv_engine=\"c\",\n",
+    "                                   parquet_file=\"_\",\n",
+    "                                   sample=256000):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) Take a (potentionally large) csv file to calculate the mutual information between outcome and covariates.\n",
     "    Both the outcome and the covariates should be continuous. \n",
@@ -670,7 +689,8 @@
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
     "                               _usecols=_usecols,\n",
     "                               csv_engine=csv_engine,\n",
-    "                               parquet_file=parquet_file)\n",
+    "                               parquet_file=parquet_file,\n",
+    "                               sample=sample)\n",
     "\n",
     "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _continuous_filter_csv_slice(_slice):\n",
@@ -709,8 +729,9 @@
     "                                _usecols=[],\n",
     "                                core_num=\"NOT DECLARED\",\n",
     "                                multp=1,\n",
-    "                                csv_engine=\"pyarrow\",\n",
-    "                                parquet_file=\"_\"):\n",
+    "                                csv_engine=\"c\",\n",
+    "                                parquet_file=\"_\",\n",
+    "                                sample=256000):\n",
     "    \"\"\"\n",
     "    (Multiprocessing version) Take a (potentionally large) csv file to calculate the Pearson's correlation between outcome and covariates.\n",
     "    If _usecols is given, the returned Pearson correlation will match _usecols. \n",
@@ -729,7 +750,8 @@
     "    _csv, _usecols = _read_csv(csv_file=csv_file,\n",
     "                               _usecols=_usecols,\n",
     "                               csv_engine=csv_engine,\n",
-    "                               parquet_file=parquet_file)\n",
+    "                               parquet_file=parquet_file,\n",
+    "                               sample=sample)\n",
     "\n",
     "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _Pearson_filter_csv_slice(_slice):\n",
@@ -759,12 +781,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:18.229709Z",
-     "start_time": "2023-01-15T18:06:03.807047Z"
+     "end_time": "2023-01-16T05:20:29.777176Z",
+     "start_time": "2023-01-16T05:20:14.139376Z"
     }
    },
    "outputs": [
@@ -772,8 +794,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.008907269166633577\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.001977226548834286\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00011640016169439443\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0018183392258457878\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -806,12 +828,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:24.959543Z",
-     "start_time": "2023-01-15T18:06:18.231203Z"
+     "end_time": "2023-01-16T05:20:36.547965Z",
+     "start_time": "2023-01-16T05:20:29.778233Z"
     }
    },
    "outputs": [
@@ -864,12 +886,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:30.959745Z",
-     "start_time": "2023-01-15T18:06:24.960929Z"
+     "end_time": "2023-01-16T05:20:42.544195Z",
+     "start_time": "2023-01-16T05:20:36.549152Z"
     }
    },
    "outputs": [
@@ -920,12 +942,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:30.963848Z",
-     "start_time": "2023-01-15T18:06:30.961315Z"
+     "end_time": "2023-01-16T05:20:42.548193Z",
+     "start_time": "2023-01-16T05:20:42.545487Z"
     }
    },
    "outputs": [],
@@ -983,12 +1005,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:30.972799Z",
-     "start_time": "2023-01-15T18:06:30.965295Z"
+     "end_time": "2023-01-16T05:20:42.557792Z",
+     "start_time": "2023-01-16T05:20:42.550761Z"
     }
    },
    "outputs": [],
@@ -1003,12 +1025,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:36.576212Z",
-     "start_time": "2023-01-15T18:06:30.975025Z"
+     "end_time": "2023-01-16T05:20:48.939930Z",
+     "start_time": "2023-01-16T05:20:42.558740Z"
     }
    },
    "outputs": [
@@ -1045,12 +1067,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:36.579541Z",
-     "start_time": "2023-01-15T18:06:36.577617Z"
+     "end_time": "2023-01-16T05:20:48.942852Z",
+     "start_time": "2023-01-16T05:20:48.941068Z"
     }
    },
    "outputs": [],
@@ -1065,12 +1087,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-15T18:06:38.649008Z",
-     "start_time": "2023-01-15T18:06:36.580634Z"
+     "end_time": "2023-01-16T05:20:51.006981Z",
+     "start_time": "2023-01-16T05:20:48.943765Z"
     }
    },
    "outputs": [
@@ -1097,7 +1119,8 @@
     "# parallel binary version\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "a = binary_filter_csv_parallel(r\"./fastHDMI/tests/sim/sim_binary.csv\")\n",
+    "a = binary_filter_csv_parallel(r\"./fastHDMI/tests/sim/sim_binary.csv\",\n",
+    "                               csv_engine=\"pyarrow\")\n",
     "plt.plot(a)\n",
     "plt.show()"
    ]
