--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -43,8 +43,8 @@
     "abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
     "abide = dd.read_csv(csv_file, sample=1250000)\n",
     "\n",
-    "_abide_name = abide.columns.tolist()#[1:]\n",
-    "_abide_name = list(abide.columns)#[1:]\n",
+    "_abide_name = abide.columns.tolist()  #[1:]\n",
+    "_abide_name = list(abide.columns)  #[1:]\n",
     "\n",
     "print(_abide_name)\n",
     "\n",
@@ -53,12 +53,12 @@
     "\n",
     "mi_output = mi.binary_filter_csv_parallel(csv_file,\n",
     "                                          _usecols=abide_name,\n",
-    "                                          csv_engine=\"pyarrow\")\n",
+    "                                          csv_engine=\"c\")\n",
     "np.save(r\"/home/kyang/ABIDE_MI_output\", mi_output)\n",
     "\n",
     "pearson_output = mi.Pearson_filter_csv_parallel(csv_file,\n",
     "                                                _usecols=abide_name,\n",
-    "                                                csv_engine=\"pyarrow\")\n",
+    "                                                csv_engine=\"c\")\n",
     "np.save(r\"/home/kyang/ABIDE_Pearson_output\", pearson_output)"
    ]
   },
