--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -53,12 +53,14 @@
     "\n",
     "mi_output = mi.binary_filter_csv_parallel(csv_file,\n",
     "                                          _usecols=abide_name,\n",
-    "                                          csv_engine=\"c\")\n",
+    "                                          csv_engine=\"c\",\n",
+    "                                          sample=1250000)\n",
     "np.save(r\"/home/kyang/ABIDE_MI_output\", mi_output)\n",
     "\n",
     "pearson_output = mi.Pearson_filter_csv_parallel(csv_file,\n",
     "                                                _usecols=abide_name,\n",
-    "                                                csv_engine=\"c\")\n",
+    "                                                csv_engine=\"c\",\n",
+    "                                                sample=1250000)\n",
     "np.save(r\"/home/kyang/ABIDE_Pearson_output\", pearson_output)"
    ]
   },
