--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:14.066276Z",
-     "start_time": "2023-01-16T05:20:13.227601Z"
+     "end_time": "2023-01-16T05:44:11.111633Z",
+     "start_time": "2023-01-16T05:44:10.313041Z"
     }
    },
    "outputs": [],
@@ -42,13 +42,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20d6146a",
+   "metadata": {},
+   "source": [
+    "# basic functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:14.101626Z",
-     "start_time": "2023-01-16T05:20:14.067372Z"
+     "end_time": "2023-01-16T05:44:11.145140Z",
+     "start_time": "2023-01-16T05:44:11.112766Z"
     }
    },
    "outputs": [],
@@ -234,13 +242,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd816b0e",
+   "metadata": {},
+   "source": [
+    "# For `plink` files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:14.116440Z",
-     "start_time": "2023-01-16T05:20:14.103142Z"
+     "end_time": "2023-01-16T05:44:11.159369Z",
+     "start_time": "2023-01-16T05:44:11.146657Z"
     }
    },
    "outputs": [],
@@ -450,13 +466,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4508b94e",
+   "metadata": {},
+   "source": [
+    "# For `csv` files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:14.138360Z",
-     "start_time": "2023-01-16T05:20:14.117752Z"
+     "end_time": "2023-01-16T05:44:11.181423Z",
+     "start_time": "2023-01-16T05:44:11.161636Z"
     }
    },
    "outputs": [],
@@ -785,8 +809,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:29.777176Z",
-     "start_time": "2023-01-16T05:20:14.139376Z"
+     "end_time": "2023-01-16T05:44:26.406592Z",
+     "start_time": "2023-01-16T05:44:11.182277Z"
     }
    },
    "outputs": [
@@ -794,8 +818,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.00011640016169439443\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0018183392258457878\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0029778310386128076\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0018313650749568183\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -832,8 +856,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:36.547965Z",
-     "start_time": "2023-01-16T05:20:29.778233Z"
+     "end_time": "2023-01-16T05:44:33.070487Z",
+     "start_time": "2023-01-16T05:44:26.407743Z"
     }
    },
    "outputs": [
@@ -890,8 +914,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:42.544195Z",
-     "start_time": "2023-01-16T05:20:36.549152Z"
+     "end_time": "2023-01-16T05:44:39.417772Z",
+     "start_time": "2023-01-16T05:44:33.071555Z"
     }
    },
    "outputs": [
@@ -946,8 +970,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:42.548193Z",
-     "start_time": "2023-01-16T05:20:42.545487Z"
+     "end_time": "2023-01-16T05:44:39.422325Z",
+     "start_time": "2023-01-16T05:44:39.419727Z"
     }
    },
    "outputs": [],
@@ -1009,8 +1033,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:42.557792Z",
-     "start_time": "2023-01-16T05:20:42.550761Z"
+     "end_time": "2023-01-16T05:44:39.430985Z",
+     "start_time": "2023-01-16T05:44:39.423434Z"
     }
    },
    "outputs": [],
@@ -1029,8 +1053,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:48.939930Z",
-     "start_time": "2023-01-16T05:20:42.558740Z"
+     "end_time": "2023-01-16T05:44:44.467891Z",
+     "start_time": "2023-01-16T05:44:39.432448Z"
     }
    },
    "outputs": [
@@ -1071,8 +1095,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:48.942852Z",
-     "start_time": "2023-01-16T05:20:48.941068Z"
+     "end_time": "2023-01-16T05:44:44.470840Z",
+     "start_time": "2023-01-16T05:44:44.469047Z"
     }
    },
    "outputs": [],
@@ -1091,8 +1115,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:20:51.006981Z",
-     "start_time": "2023-01-16T05:20:48.943765Z"
+     "end_time": "2023-01-16T05:44:46.563404Z",
+     "start_time": "2023-01-16T05:44:44.471873Z"
     }
    },
    "outputs": [
