--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -43,8 +43,8 @@
     "abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
     "abide = dd.read_csv(csv_file, sample=1250000)\n",
     "\n",
-    "_abide_name = abide.columns.tolist()  #[1:]\n",
-    "_abide_name = list(abide.columns)  #[1:]\n",
+    "_abide_name = abide.columns.tolist()[1:]\n",
+    "_abide_name = list(abide.columns)[1:]\n",
     "\n",
     "print(_abide_name)\n",
     "\n",
@@ -175,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
