fix some jit compiler setups to make it run faster

--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:11.111633Z",
-     "start_time": "2023-01-16T05:44:10.313041Z"
+     "end_time": "2023-01-16T07:10:41.045811Z",
+     "start_time": "2023-01-16T07:10:40.252757Z"
     }
    },
    "outputs": [],
@@ -55,13 +55,13 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:11.145140Z",
-     "start_time": "2023-01-16T05:44:11.112766Z"
+     "end_time": "2023-01-16T07:10:41.076639Z",
+     "start_time": "2023-01-16T07:10:41.047196Z"
     }
    },
    "outputs": [],
    "source": [
-    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def MI_continuous_SNP(a,\n",
     "                      b,\n",
     "                      N=500,\n",
@@ -182,7 +182,7 @@
     "\n",
     "\n",
     "# make this function available\n",
-    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def MI_bivariate_continuous(a,\n",
     "                            b,\n",
     "                            a_N=300,\n",
@@ -226,7 +226,7 @@
     "\n",
     "\n",
     "# make this function available\n",
-    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def MI_binary_continuous(a,\n",
     "                         b,\n",
     "                         N=500,\n",
@@ -255,8 +255,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:11.159369Z",
-     "start_time": "2023-01-16T05:44:11.146657Z"
+     "end_time": "2023-01-16T07:10:41.091207Z",
+     "start_time": "2023-01-16T07:10:41.078177Z"
     }
    },
    "outputs": [],
@@ -378,7 +378,7 @@
     "                               assume_unique=True,\n",
     "                               return_indices=True)[1]\n",
     "\n",
-    "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "    # @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _continuous_filter_plink_slice(_slice):\n",
     "        _MI_slice = _np.zeros(len(_slice))\n",
     "        k = 0\n",
@@ -441,7 +441,7 @@
     "                               assume_unique=True,\n",
     "                               return_indices=True)[1]\n",
     "\n",
-    "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "    # @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _binary_filter_plink_slice(_slice):\n",
     "        _MI_slice = _np.zeros(len(_slice))\n",
     "        k = 0\n",
@@ -479,13 +479,13 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:11.181423Z",
-     "start_time": "2023-01-16T05:44:11.161636Z"
+     "end_time": "2023-01-16T07:10:41.111226Z",
+     "start_time": "2023-01-16T07:10:41.092338Z"
     }
    },
    "outputs": [],
    "source": [
-    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def _read_csv(csv_file, _usecols, csv_engine, parquet_file, sample):\n",
     "    \"\"\"\n",
     "    Read a csv file using differnet engines. Use dask to read csv if low in memory.\n",
@@ -522,7 +522,7 @@
     "    return _csv, _usecols\n",
     "\n",
     "\n",
-    "@_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "# @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "def _read_two_columns(_csv, __, csv_engine):\n",
     "    \"\"\"\n",
     "    Read two columns from a dataframe object, remove NaN. Use dask to read csv if low in memory.\n",
@@ -651,7 +651,7 @@
     "                               parquet_file=parquet_file,\n",
     "                               sample=sample)\n",
     "\n",
-    "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "    # @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _binary_filter_csv_slice(_slice):\n",
     "        _MI_slice = _np.zeros(\n",
     "            len(_slice))  # returned MI should be of the same length as slice\n",
@@ -716,7 +716,7 @@
     "                               parquet_file=parquet_file,\n",
     "                               sample=sample)\n",
     "\n",
-    "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "    # @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _continuous_filter_csv_slice(_slice):\n",
     "        _MI_slice = _np.zeros(\n",
     "            len(_slice))  # returned MI should be of the same length as slice\n",
@@ -777,7 +777,7 @@
     "                               parquet_file=parquet_file,\n",
     "                               sample=sample)\n",
     "\n",
-    "    @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
+    "    # @_jit(forceobj=True, nogil=True, cache=True, parallel=True, fastmath=True)\n",
     "    def _Pearson_filter_csv_slice(_slice):\n",
     "        _pearson_slice = _np.zeros(\n",
     "            len(_slice))  # returned MI should be of the same length as slice\n",
@@ -809,8 +809,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:26.406592Z",
-     "start_time": "2023-01-16T05:44:11.182277Z"
+     "end_time": "2023-01-16T07:10:56.227329Z",
+     "start_time": "2023-01-16T07:10:41.112300Z"
     }
    },
    "outputs": [
@@ -818,8 +818,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0029778310386128076\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0018313650749568183\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.000140551228993822\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0024477326768919203\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -827,8 +827,8 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "a = np.random.binomial(2, .3, 200)\n",
-    "b = np.random.binomial(2, .3, 200)\n",
+    "a = np.random.binomial(2, .3, 2000)\n",
+    "b = np.random.binomial(2, .3, 2000)\n",
     "print(\n",
     "    \"two independant generalized Bern. r.v. realisations has MI estimate of \",\n",
     "    MI_binary_SNP(a, b))\n",
@@ -856,8 +856,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:33.070487Z",
-     "start_time": "2023-01-16T05:44:26.407743Z"
+     "end_time": "2023-01-16T07:11:02.022878Z",
+     "start_time": "2023-01-16T07:10:56.228411Z"
     }
    },
    "outputs": [
@@ -914,8 +914,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:39.417772Z",
-     "start_time": "2023-01-16T05:44:33.071555Z"
+     "end_time": "2023-01-16T07:11:07.108847Z",
+     "start_time": "2023-01-16T07:11:02.024205Z"
     }
    },
    "outputs": [
@@ -970,8 +970,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:39.422325Z",
-     "start_time": "2023-01-16T05:44:39.419727Z"
+     "end_time": "2023-01-16T07:11:07.112410Z",
+     "start_time": "2023-01-16T07:11:07.110252Z"
     }
    },
    "outputs": [],
@@ -1033,8 +1033,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:39.430985Z",
-     "start_time": "2023-01-16T05:44:39.423434Z"
+     "end_time": "2023-01-16T07:11:07.138108Z",
+     "start_time": "2023-01-16T07:11:07.114165Z"
     }
    },
    "outputs": [],
@@ -1053,8 +1053,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:44.467891Z",
-     "start_time": "2023-01-16T05:44:39.432448Z"
+     "end_time": "2023-01-16T07:11:11.166535Z",
+     "start_time": "2023-01-16T07:11:07.139226Z"
     }
    },
    "outputs": [
@@ -1095,8 +1095,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:44.470840Z",
-     "start_time": "2023-01-16T05:44:44.469047Z"
+     "end_time": "2023-01-16T07:11:11.169694Z",
+     "start_time": "2023-01-16T07:11:11.167962Z"
     }
    },
    "outputs": [],
@@ -1115,8 +1115,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T05:44:46.563404Z",
-     "start_time": "2023-01-16T05:44:44.471873Z"
+     "end_time": "2023-01-16T07:11:12.637088Z",
+     "start_time": "2023-01-16T07:11:11.170701Z"
     }
    },
    "outputs": [
