--- a/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
+++ b/paper/ABIDE_data_analysis/ABIDE_analysis.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "39eea284-aeec-427b-b3fc-2a35d72a5825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-19T22:04:34.125353Z",
-     "start_time": "2023-01-19T22:04:34.120184Z"
+     "end_time": "2023-01-20T04:56:48.430795Z",
+     "start_time": "2023-01-20T04:56:47.150941Z"
     }
    },
    "outputs": [],
@@ -18,7 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import kendalltau\n",
     "from scipy.stats import rankdata\n",
-    "# import fastHDMI as mi"
+    "import fastHDMI as mi"
    ]
   },
   {
@@ -27,6 +27,7 @@
    "metadata": {},
    "source": [
     "# Calculate MI for ABIDE data\n",
+    "# Calculation for age\n",
     "## this block is only to be run on Compute Canada"
    ]
   },
@@ -51,6 +52,146 @@
     "\n",
     "# print(_abide_name)\n",
     "\n",
+    "# we don't inlcude age and sex in the screening since they should always be included in the model\n",
+    "abide_name = [_abide_name[-3]] + _abide_name[1:-3]\n",
+    "\n",
+    "# so that the left first column is the outcome and the rest columns are areas\n",
+    "\n",
+    "mi_output = mi.continuous_filter_csv_parallel(csv_file,\n",
+    "                                              _usecols=abide_name,\n",
+    "                                              csv_engine=\"c\",\n",
+    "                                              sample=1250000)\n",
+    "np.save(r\"/home/kyang/ABIDE_age_MI_output\", mi_output)\n",
+    "\n",
+    "pearson_output = mi.Pearson_filter_csv_parallel(csv_file,\n",
+    "                                                _usecols=abide_name,\n",
+    "                                                csv_engine=\"c\",\n",
+    "                                                sample=1250000)\n",
+    "np.save(r\"/home/kyang/ABIDE_age_Pearson_output\", pearson_output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46ea4ca1-abfd-4856-8f70-63658655173a",
+   "metadata": {},
+   "source": [
+    "# Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-20T04:41:39.811214Z",
+     "start_time": "2023-01-20T04:41:39.092585Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "abide_mi = np.load(r\"./ABIDE_age_MI_output.npy\")\n",
+    "plt.hist(np.log(abide_mi), 500)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58f1a09a-45cf-46a3-be42-9f9394ee4f96",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-20T04:41:40.313876Z",
+     "start_time": "2023-01-20T04:41:39.812800Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "abide_pearson = np.load(r\"./ABIDE_age_Pearson_output.npy\")\n",
+    "plt.hist(np.log(np.abs(abide_pearson)), 500)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b25d3fa0",
+   "metadata": {},
+   "source": [
+    "## Comparing two ranking with Kendall's $\\tau$\n",
+    "\n",
+    "The results show that the two ranking by mutual information and Pearson's correlation vary greatly by Kendall's tau -- I also tried the Pearson's correlation between two ranking (not that I should do this) and the correlation is also very small.\n",
+    "\n",
+    "**So in summary, the two ranking vary greatly.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "742260a9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-20T04:42:29.288623Z",
+     "start_time": "2023-01-20T04:42:28.900688Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(np.log(abide_mi), abide_pearson, 'o')\n",
+    "plt.show()\n",
+    "# keep this, add different selections\n",
+    "# PREDICT AGE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e78ee74",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-20T04:41:50.973463Z",
+     "start_time": "2023-01-20T04:41:50.755184Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Kendall's tau: \\n\",\n",
+    "      kendalltau(rankdata(-abide_mi), rankdata(-abide_pearson)))\n",
+    "print(\"Pearson's correlation: \\n\",\n",
+    "      np.corrcoef(rankdata(-abide_mi), rankdata(-abide_pearson)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8afd4dbe",
+   "metadata": {},
+   "source": [
+    "# Calculate MI for ABIDE data\n",
+    "# Calculation for diagnosis outcome\n",
+    "## this block is only to be run on Compute Canada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9c3680c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-01-20T04:56:33.182030Z",
+     "start_time": "2023-01-20T04:56:32.928624Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "csv_file = r\"/home/kyang/projects/def-cgreenwo/abide_data/abide_fs60_vout_fwhm0_lh_SubjectIDFormatted_N1050_nonzero_withSEX.csv\"\n",
+    "abide = pd.read_csv(csv_file, encoding='unicode_escape', engine=\"c\")\n",
+    "# abide = dd.read_csv(csv_file, sample=1250000)\n",
+    "\n",
+    "_abide_name = abide.columns.tolist()[1:]\n",
+    "# _abide_name = list(abide.columns)[1:]\n",
+    "\n",
+    "# print(_abide_name)\n",
+    "\n",
+    "# we don't inlcude age and sex in the screening since they should always be included in the model\n",
     "abide_name = [_abide_name[-1]] + _abide_name[1:-3]\n",
     "# so that the left first column is the outcome and the rest columns are areas\n",
     "\n",
@@ -69,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46ea4ca1-abfd-4856-8f70-63658655173a",
+   "id": "c2de0251",
    "metadata": {},
    "source": [
     "# Plots"
@@ -77,12 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "eb054aa1-5485-4ea5-8f0b-5eefadf893ca",
+   "execution_count": 4,
+   "id": "5230b75d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-19T22:04:38.373117Z",
-     "start_time": "2023-01-19T22:04:37.641727Z"
+     "end_time": "2023-01-20T04:56:51.085995Z",
+     "start_time": "2023-01-20T04:56:50.383594Z"
     }
    },
    "outputs": [
@@ -105,12 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "58f1a09a-45cf-46a3-be42-9f9394ee4f96",
+   "execution_count": 5,
+   "id": "6a6440b8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-19T22:04:39.899521Z",
-     "start_time": "2023-01-19T22:04:39.501162Z"
+     "end_time": "2023-01-20T04:56:51.592019Z",
+     "start_time": "2023-01-20T04:56:51.087400Z"
     }
    },
    "outputs": [
@@ -133,10 +274,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b25d3fa0",
+   "id": "ba8cd6c2",
    "metadata": {},
    "source": [
-    "# Comparing two ranking with Kendall's $\\tau$\n",
+    "## Comparing two ranking with Kendall's $\\tau$\n",
     "\n",
     "The results show that the two ranking by mutual information and Pearson's correlation vary greatly by Kendall's tau -- I also tried the Pearson's correlation between two ranking (not that I should do this) and the correlation is also very small.\n",
     "\n",
@@ -145,12 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "742260a9",
+   "execution_count": 6,
+   "id": "05d1f6d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-19T22:09:09.237100Z",
-     "start_time": "2023-01-19T22:09:09.059770Z"
+     "end_time": "2023-01-20T04:56:53.706007Z",
+     "start_time": "2023-01-20T04:56:53.348789Z"
     }
    },
    "outputs": [
@@ -166,7 +307,7 @@
     }
    ],
    "source": [
-    "plt.plot(np.log(abide_mi), ((abide_pearson)), 'o')\n",
+    "plt.plot(np.log(abide_mi), abide_pearson, 'o')\n",
     "plt.show()\n",
     "# keep this, add different selections\n",
     "# PREDICT AGE"
@@ -174,12 +315,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "4e78ee74",
+   "execution_count": 7,
+   "id": "31f92ad7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-16T20:00:40.832561Z",
-     "start_time": "2023-01-16T20:00:40.617303Z"
+     "end_time": "2023-01-20T04:56:53.912233Z",
+     "start_time": "2023-01-20T04:56:53.779789Z"
     }
    },
    "outputs": [
@@ -227,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
