--- a/screening_MODULE.ipynb
+++ b/screening_MODULE.ipynb
@@ -6,8 +6,8 @@
    "id": "f1cc105c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:52:41.806208Z",
-     "start_time": "2023-01-23T01:52:40.975693Z"
+     "end_time": "2023-01-23T06:41:34.012652Z",
+     "start_time": "2023-01-23T06:41:33.168634Z"
     }
    },
    "outputs": [],
@@ -55,8 +55,8 @@
    "id": "1741add3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:52:41.837041Z",
-     "start_time": "2023-01-23T01:52:41.807465Z"
+     "end_time": "2023-01-23T06:41:34.043090Z",
+     "start_time": "2023-01-23T06:41:34.013808Z"
     }
    },
    "outputs": [],
@@ -255,8 +255,8 @@
    "id": "8ce8b66d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:52:41.851959Z",
-     "start_time": "2023-01-23T01:52:41.838678Z"
+     "end_time": "2023-01-23T06:41:34.058448Z",
+     "start_time": "2023-01-23T06:41:34.044599Z"
     }
    },
    "outputs": [],
@@ -525,8 +525,8 @@
    "id": "51fcb92a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:52:41.912896Z",
-     "start_time": "2023-01-23T01:52:41.853176Z"
+     "end_time": "2023-01-23T06:41:34.115645Z",
+     "start_time": "2023-01-23T06:41:34.059535Z"
     }
    },
    "outputs": [],
@@ -900,7 +900,12 @@
     "            ]  # here using _usecol[j] because only input variables indices were splitted\n",
     "            _a, _b = _read_two_columns(_csv=_csv, __=__, csv_engine=csv_engine)\n",
     "            # returned Pearson correlation is a symmetric matrix\n",
-    "            return _np.corrcoef(_a, _b)[0, 1]\n",
+    "            _a -= _np.mean(_a)\n",
+    "            _a /= _np.std(_a)\n",
+    "            _b -= _np.mean(_b)\n",
+    "            _b /= _np.std(_b)\n",
+    "            #             return _np.corrcoef(_a, _b)[0, 1]\n",
+    "            return _a @ _b\n",
     "\n",
     "        _pearson_slice = _np.array(list(map(_map_foo, _slice)))\n",
     "        return _pearson_slice\n",
@@ -922,8 +927,8 @@
    "id": "8a032b1b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:52:55.473617Z",
-     "start_time": "2023-01-23T01:52:41.913882Z"
+     "end_time": "2023-01-23T06:41:49.099584Z",
+     "start_time": "2023-01-23T06:41:34.116730Z"
     }
    },
    "outputs": [
@@ -931,8 +936,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0002808077584710482\n",
-      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.001878227493868306\n",
+      "two independant generalized Bern. r.v. realisations has MI estimate of  0.0011276521115681512\n",
+      "two independant generalized Gaussian r.v. realisations has MI estimate of  0.0022768547376065366\n",
       "MI estimate between a,a and a,b:  0.11484453582991859 0.0018942218780961517\n"
      ]
     }
@@ -969,8 +974,8 @@
    "id": "6b189ee8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:01.296896Z",
-     "start_time": "2023-01-23T01:52:55.474752Z"
+     "end_time": "2023-01-23T06:41:54.873682Z",
+     "start_time": "2023-01-23T06:41:49.100697Z"
     }
    },
    "outputs": [
@@ -1027,8 +1032,8 @@
    "id": "fb2875be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:06.441465Z",
-     "start_time": "2023-01-23T01:53:01.298293Z"
+     "end_time": "2023-01-23T06:42:00.246638Z",
+     "start_time": "2023-01-23T06:41:54.875835Z"
     }
    },
    "outputs": [
@@ -1083,8 +1088,8 @@
    "id": "0764c527",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:06.446736Z",
-     "start_time": "2023-01-23T01:53:06.443202Z"
+     "end_time": "2023-01-23T06:42:00.250109Z",
+     "start_time": "2023-01-23T06:42:00.247979Z"
     }
    },
    "outputs": [],
@@ -1146,8 +1151,8 @@
    "id": "6fbd58c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:06.468964Z",
-     "start_time": "2023-01-23T01:53:06.449085Z"
+     "end_time": "2023-01-23T06:42:00.275371Z",
+     "start_time": "2023-01-23T06:42:00.251657Z"
     }
    },
    "outputs": [],
@@ -1166,8 +1171,8 @@
    "id": "177a3dfc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:10.510808Z",
-     "start_time": "2023-01-23T01:53:06.469920Z"
+     "end_time": "2023-01-23T06:42:04.227990Z",
+     "start_time": "2023-01-23T06:42:00.276396Z"
     }
    },
    "outputs": [
@@ -1208,8 +1213,8 @@
    "id": "03a42999",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:10.514388Z",
-     "start_time": "2023-01-23T01:53:10.512107Z"
+     "end_time": "2023-01-23T06:42:04.231614Z",
+     "start_time": "2023-01-23T06:42:04.229439Z"
     }
    },
    "outputs": [],
@@ -1228,8 +1233,8 @@
    "id": "9634a110",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-01-23T01:53:11.985811Z",
-     "start_time": "2023-01-23T01:53:10.515374Z"
+     "end_time": "2023-01-23T06:42:05.708705Z",
+     "start_time": "2023-01-23T06:42:04.232782Z"
     }
    },
    "outputs": [
